--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,169 +6,166 @@
     android:layout_height="match_parent"
     tools:context="com.example.raluca.storebooksystem.ProfileActivity">
 
-    <TextView
-        android:id="@+id/textView21"
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editTextLastName"
-        android:layout_below="@+id/textView12"
-        android:layout_marginTop="22dp"
-        android:text="Username"
-        android:textColor="?attr/colorPrimaryDark"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/scrollView2"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="21dp"
-        android:fontFamily="serif"
-        android:text="My Details"
-        android:textColor="?attr/colorAccent"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="117dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:layout_alignParentStart="true">
 
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editTextUsername"
-        android:layout_below="@+id/editTextUsername"
-        android:text="First Name"
-        android:textColor="?attr/colorPrimaryDark"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/editTextLastName"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView22"
-        android:layout_below="@+id/textView22"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:selectAllOnFocus="false"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/editTextFirstName"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView17"
-        android:layout_below="@+id/textView17"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:selectAllOnFocus="false"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/editTextUsername"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView21"
-        android:layout_centerHorizontal="true"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:selectAllOnFocus="false"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/textView22"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editTextFirstName"
-        android:layout_below="@+id/editTextFirstName"
-        android:text="Last Name"
-        android:textColor="?attr/actionModeSplitBackground"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/textView24"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editTextLastName"
-        android:layout_below="@+id/editTextLastName"
-        android:text="Email"
-        android:textColor="@android:color/holo_green_light"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/editTextEmail"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView24"
-        android:layout_below="@+id/textView24"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editTextEmail"
-        android:layout_below="@+id/editTextEmail"
-        android:text="Contact Number"
-        android:textColor="@android:color/holo_green_light"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/editTextContactNumber"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/editTextEmail"
-        android:layout_alignStart="@+id/textView3"
-        android:layout_below="@+id/textView3"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textSize="16sp" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editTextContactNumber"
-        android:layout_below="@+id/editTextContactNumber"
-        android:text="Address"
-        android:textColor="@android:color/holo_green_light"
-        android:textSize="16sp" />
-
-    <EditText
-        android:id="@+id/editTextAddress"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editTextContactNumber"
-        android:layout_below="@+id/textView4"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textSize="16sp" />
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardViewUpdate"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        app:cardBackgroundColor="@color/colorPrimaryDark"
-        app:cardCornerRadius="25dp"
-        app:cardElevation="10dp"
-        android:layout_below="@+id/editTextAddress"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp">
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:paddingLeft="20dp"
+                android:textAlignment="center"
+                android:layout_marginTop="40dp"
+                android:fontFamily="serif"
+                android:text="My Details"
+                android:textColor="?attr/colorAccent"
+                android:textSize="24sp" />
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="UPDATE"
-                android:textColor="@android:color/white"
-                android:textStyle="bold" />
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
+                android:layout_marginTop="20dp"
+                android:text="First Name"
+                android:layout_marginLeft="60dp"
+                android:textColor="?attr/colorPrimaryDark"
+                android:textSize="16sp" />
+
+
+            <EditText
+                android:id="@+id/editTextFirstName"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:layout_marginLeft="60dp"
+                android:inputType="textPersonName"
+                android:selectAllOnFocus="false"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Last Name"
+                android:layout_marginLeft="60dp"
+                android:textColor="?attr/colorPrimaryDark"
+                android:textSize="16sp" />
+
+
+            <EditText
+                android:id="@+id/editTextLastName"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:layout_marginLeft="60dp"
+                android:inputType="textPersonName"
+                android:selectAllOnFocus="false"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Userame"
+                android:layout_marginLeft="60dp"
+                android:textColor="?attr/colorPrimaryDark"
+                android:textSize="16sp" />
+
+
+            <EditText
+                android:id="@+id/editTextUsername"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:layout_marginLeft="60dp"
+                android:inputType="textPersonName"
+                android:selectAllOnFocus="false"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Email"
+                android:layout_marginLeft="60dp"
+                android:textColor="?attr/colorPrimaryDark"
+                android:textSize="16sp" />
+
+
+            <EditText
+                android:id="@+id/editTextEmail"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:layout_marginLeft="60dp"
+                android:inputType="textPersonName"
+                android:selectAllOnFocus="false"
+                android:textSize="16sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Contact Number"
+                android:layout_marginLeft="60dp"
+                android:textColor="?attr/colorPrimaryDark"
+                android:textSize="16sp" />
+
+
+            <EditText
+                android:id="@+id/editTextContactNumber"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:layout_marginLeft="60dp"
+                android:inputType="textPersonName"
+                android:selectAllOnFocus="false"
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/errorInfo2"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="10sp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="60dp"/>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardViewUpdate"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                app:cardBackgroundColor="@color/colorPrimaryDark"
+                app:cardCornerRadius="25dp"
+                app:cardElevation="10dp"
+                android:layout_marginLeft="40dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="30dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView8"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="UPDATE"
+                        android:textColor="@android:color/white"
+                        android:textStyle="bold" />
+                </RelativeLayout>
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
