--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -86,30 +86,42 @@
         android:inputType="textPassword"
         android:textSize="16dp" />
 
-    <android.support.v7.widget.CardView
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="23dp"
-        app:cardCornerRadius="25dp"
-        app:cardElevation="10dp"
-        app:cardBackgroundColor="@color/colorPrimaryDark"
-        android:id="@+id/cardViewSubmit"
+    <EditText
+        android:id="@+id/errorInfo"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/editTextRetypePassword"
         android:layout_below="@+id/editTextRetypePassword"
-        android:layout_centerHorizontal="true">
+        android:layout_marginTop="10dp"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="10sp" />
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardViewSubmit"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_alignStart="@+id/errorInfo"
+        android:layout_below="@+id/errorInfo"
+        android:layout_marginTop="5dp"
+        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="10dp">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="250dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dp">
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="wrap_content"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/cardViewSubmit"
                 android:layout_centerHorizontal="true"
                 android:layout_centerInParent="true"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="5dp"
                 android:text="SUBMIT"
+                android:textAlignment="center"
                 android:textColor="@android:color/white"
                 android:textStyle="bold" />
         </RelativeLayout>
