--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -73,7 +74,7 @@
 
 
                 <android.support.v7.widget.CardView
-                    android:id="@+id/cardCartShopping"
+                    android:id="@+id/cardCartAllBooks"
                     android:layout_width="160dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
@@ -100,7 +101,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:text="Cart"
+                            android:text="All Books"
                             android:textStyle="bold" />
 
 
@@ -109,7 +110,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:padding="5dp"
-                            android:text="Go and shop!"
+                            android:text="Here you find all the books!"
                             android:textColor="@color/dark_light" />
 
 
@@ -176,13 +177,15 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="70dp">
+
                 <TextView
+                    android:id="@+id/textViewDescriptionInterested"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:textAlignment="center"
                     android:text="Because you are interested in"
+                    android:textAlignment="center"
                     android:textColor="@color/black"
-                    android:textSize="17dp"/>
+                    android:textSize="17dp" />
 
                 <TextView
                     android:id="@+id/text3"
@@ -210,48 +213,39 @@
                         android:orientation="horizontal">
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="190dp"
                             android:layout_height="match_parent"
                             android:orientation="vertical">
 
                             <FrameLayout
-                                android:layout_width="match_parent"
+                                android:layout_width="190dp"
                                 android:layout_height="wrap_content">
 
                                 <ImageView
                                     android:id="@+id/image_view1"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="190dp"
                                     android:layout_height="150dp"
                                     android:scaleType="center" />
 
-                                <TextView
-                                    android:id="@+id/title1"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="bottom"
-                                    android:layout_margin="8dp"
-                                    android:text="Title"
-                                    android:textColor="#fff"
-                                    android:textSize="28sp" />
 
                                 <View
                                     android:id="@+id/view1"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="190dp"
                                     android:layout_height="100dp"
                                     android:background="@drawable/gradient_overlay" />
 
                             </FrameLayout>
 
                             <TextView
-                                android:id="@+id/description1"
-                                android:layout_width="wrap_content"
+                                android:id="@+id/title1"
+                                android:layout_width="190dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="8dp"
                                 android:text="this is the description" />
 
                             <TextView
-                                android:id="@+id/published_date1"
-                                android:layout_width="wrap_content"
+                                android:id="@+id/author1"
+                                android:layout_width="190dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="8dp"
                                 android:text="2073/2/2" />
@@ -259,98 +253,80 @@
 
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="190dp"
                             android:layout_height="match_parent"
                             android:layout_marginLeft="20px"
                             android:orientation="vertical">
 
                             <FrameLayout
-                                android:layout_width="match_parent"
+                                android:layout_width="190dp"
                                 android:layout_height="wrap_content">
 
                                 <ImageView
                                     android:id="@+id/image_view2"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="190dp"
                                     android:layout_height="150dp"
                                     android:scaleType="center" />
 
-                                <TextView
-                                    android:id="@+id/title2"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="bottom"
-                                    android:layout_margin="8dp"
-                                    android:text="Title"
-                                    android:textColor="#fff"
-                                    android:textSize="28sp" />
 
                                 <View
                                     android:id="@+id/view2"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="190dp"
                                     android:layout_height="100dp"
                                     android:background="@drawable/gradient_overlay" />
 
                             </FrameLayout>
 
                             <TextView
-                                android:id="@+id/description2"
-                                android:layout_width="wrap_content"
+                                android:id="@+id/title2"
+                                android:layout_width="190dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="8dp"
                                 android:text="this is the description" />
 
                             <TextView
-                                android:id="@+id/published_date2"
-                                android:layout_width="wrap_content"
+                                android:id="@+id/author2"
+                                android:layout_width="190dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="8dp"
                                 android:text="2073/2/2" />
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="190dp"
                             android:layout_height="match_parent"
                             android:layout_marginLeft="20px"
                             android:orientation="vertical">
 
                             <FrameLayout
-                                android:layout_width="match_parent"
+                                android:layout_width="190dp"
                                 android:layout_height="wrap_content">
 
                                 <ImageView
                                     android:id="@+id/image_view3"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="190dp"
                                     android:layout_height="150dp"
                                     android:scaleType="center" />
 
-                                <TextView
-                                    android:id="@+id/title3"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="bottom"
-                                    android:layout_margin="8dp"
-                                    android:text="Title"
-                                    android:textColor="#fff"
-                                    android:textSize="28sp" />
 
                                 <View
                                     android:id="@+id/view3"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="190dp"
                                     android:layout_height="100dp"
                                     android:background="@drawable/gradient_overlay" />
 
                             </FrameLayout>
 
                             <TextView
-                                android:id="@+id/description3"
-                                android:layout_width="wrap_content"
+                                android:id="@+id/title3"
+                                android:layout_width="190dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="8dp"
                                 android:text="this is the description" />
 
                             <TextView
-                                android:id="@+id/published_date3"
-                                android:layout_width="wrap_content"
+                                android:id="@+id/author3"
+                                android:layout_width="190dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="8dp"
                                 android:text="2073/2/2" />
@@ -358,49 +334,40 @@
 
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="190dp"
                             android:layout_height="match_parent"
                             android:layout_marginLeft="20px"
                             android:orientation="vertical">
 
                             <FrameLayout
-                                android:layout_width="match_parent"
+                                android:layout_width="190dp"
                                 android:layout_height="wrap_content">
 
                                 <ImageView
                                     android:id="@+id/image_view4"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="190dp"
                                     android:layout_height="150dp"
                                     android:scaleType="center" />
 
-                                <TextView
-                                    android:id="@+id/title4"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="bottom"
-                                    android:layout_margin="8dp"
-                                    android:text="Title"
-                                    android:textColor="#fff"
-                                    android:textSize="28sp" />
 
                                 <View
                                     android:id="@+id/view4"
-                                    android:layout_width="match_parent"
+                                    android:layout_width="190dp"
                                     android:layout_height="100dp"
                                     android:background="@drawable/gradient_overlay" />
 
                             </FrameLayout>
 
                             <TextView
-                                android:id="@+id/description4"
-                                android:layout_width="wrap_content"
+                                android:id="@+id/title4"
+                                android:layout_width="190dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="8dp"
                                 android:text="this is the description" />
 
                             <TextView
-                                android:id="@+id/published_date4"
-                                android:layout_width="wrap_content"
+                                android:id="@+id/author4"
+                                android:layout_width="190dp"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="8dp"
                                 android:text="2073/2/2" />
